# website

./: .depcheckrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  AGENTS.md  CITATION.cff  LICENSE  README.md  appsvc.yaml  blog.html  contact.html  docusaurus.config.js  download.html  index.html  lychee.toml  package-lock.json  package.json  pricing.html  privacy.html  reductai.html  requirements.txt  sidebars.js  sidebars.json  sitemap.xml  staticwebapp.config.json  terms.html  versions.json
.github/workflows/: azure-static-web-apps-happy-desert-02d471d03.yml  azure-static-web-apps-salmon-bush-0fb136503.yml  format-depcheck.yml  format.yml  links.yml  test_documentation.yml
assets/css/: styles.b419559f.css
assets/js/: 001c9fcd.205d9837.js  01a85c17.3908c714.js  083b10f0.9b27dada.js  083b10f0.b7d641d6.js  09f03b0f.2927913f.js  0a4e2b9f.3038100e.js  0a4e2b9f.a24938c6.js  0ccabe9c.e3ce2b52.js  13a93707.e1e08f96.js  1488d453.84aec3c1.js  14a67ce2.92be948a.js  1772.4a571465.js  17896441.0139f81f.js  18da0a77.e0bb8847.js  1b273592.fa34a4cf.js  1df93b7f.f46137eb.js  1f391b9e.01081941.js  1f57d2c7.14663273.js  1f57d2c7.2ad2c3ba.js  1fa73b22.735f6322.js  2155e847.e61d00a8.js  21f70f5f.6c55d5b2.js  2236fe8a.270597f6.js  255ad2a1.d7302087.js  279770d6.0f01f118.js  279770d6.8b86930d.js  2833a959.a6b542ba.js  28881b54.74e53f93.js  290d7649.27ea63d0.js  295773b6.6e38f782.js  2b2d6c01.32c234f7.js  2b2d6c01.f05330a7.js  2bce4dc4.67d85988.js  2c4e2a5f.819a257d.js  2cbb4a99.b2667050.js  2d65066b.cc839a38.js  3021cf83.db0a8c10.js  316b9793.a0f431ee.js  32efb9b0.90dd4a6e.js  3556.2ad8e5c3.js  (+112 more)
blog/: 2019-05-29-long-blog-post.md  2022-12-17-cpp-sdk-quick-start.md  2022-12-17-cpp-sdk-quick-start.mdx  2022-12-19-reductstore-v1_2_1-released.md  2022-12-19-reductstore-v1_2_1-released.mdx  2022-12-20-reduct-cpp-v1_2_0-released.mdx  2022-12-22-reduct-py-v1_2_0-released.md  2022-12-22-reduct-py-v1_2_0-released.mdx  2022-12-23-reduct-js-v1_2_0-released.md  2022-12-23-reduct-js-v1_2_0-released.mdx  2022-12-26-reduct-cli-v0_4_0-released.md  2022-12-26-reduct-cli-v0_4_0-released.mdx  2022-12-29-how-to-keep-mqtt-data-node.mdx  2023-01-07-performance-comparison-reductstore-vs-minio.mdx  2023-01-09-py-sdk-quick-start.md  2023-01-09-py-sdk-quick-start.mdx  2023-01-15-js-sdk-quick-start.md  2023-01-15-js-sdk-quick-start.mdx  2023-01-20-reduct-cli-v0_5_0-released.md  2023-01-20-reduct-cli-v0_5_0-released.mdx  2023-01-26-reductstore-v1_3_0-released.md  2023-01-26-reductstore-v1_3_0-released.mdx  2023-01-28-reduct-py-v1_3_0-released.md  2023-01-28-reduct-py-v1_3_0-released.mdx  2023-02-07-reduct-cli-v0_6-released.mdx  2023-02-10-reduct-js-v1_3_0-released.mdx  2023-02-19-reduct-cli-v0_7-released.mdx  2023-02-22-reduct-cpp-v1_3_0-released.mdx  2023-03-05-snap-support.md  2023-03-05-snap-support.mdx  2023-03-09-reduct-cli-v0_8-released.md  2023-03-09-reduct-cli-v0_8-released.mdx  2023-04-01-we-move-to-rust.md  2023-04-01-we-move-to-rust.mdx  2023-04-05-data-reduction-on-edge.mdx  2023-05-09-6-weeks-with-rust.md  2023-05-09-6-weeks-with-rust.mdx  2023-06-04-subscription-cpp.mdx  2023-06-09-reductstore-v1_4_0-released.md  2023-06-09-reductstore-v1_4_0-released.mdx  (+18 more)
blog/2022-12-18-3-ways-stora-data-for-computer-vision-applications/: index.md  index.mdx
blog/2023-01-04-reductstore-behind-nginx/: index.md  index.mdx
blog/2023-03-07-cats-datasets/: index.md  index.mdx
blog/2023-07-07-mqtt-data-storage/: index.md  index.mdx
blog/2023-09-13/: 2023-09-13-reductstore-benchmark.md
blog/2023-09-13-reductstore-benchmark/: index.md  index.mdx
blog/2023-10-15-Implementing-open-source-ai-anomaly-detection/: index.md  index.mdx
docs/: azure.html  azure.mdx  configuration.html  configuration.md  configuration.mdx  getting-started.html  getting-started.md  getting-started.mdx  glossary.mdx  how-does-it-work.html  how-does-it-work.md  how-does-it-work.mdx  http-api.html
docs/examples/cpp/: CMakeLists.txt
docs/examples/cpp/src/: buckets_remove.cc  data_ingestion_batch.cc  data_management_delete_data.cc  data_management_delete_query.cc  data_management_delete_records.cc  data_management_update_labels.cc  data_querying_filter.cc  data_querying_time_range.cc  data_replication_browse.cc  data_replication_create.cc  data_replication_remove.cc  lifecycle_policy_create.cc  lifecycle_policy_remove.cc  quick_start.cc
docs/examples/rs/: Cargo.toml
docs/examples/rs/examples/: access_control_browse_tokens.rs  access_control_create_token.rs  access_control_remove_token.rs  buckets_remove.rs  buckets_rename.rs  data_ingestion_batch.rs  data_management_delete_data.rs  data_management_delete_query.rs  data_management_delete_records.rs  data_management_rename_entries.rs  data_management_update_labels.rs  data_querying_filter.rs  data_querying_timestamp.rs  data_replication_browse.rs  data_replication_create.rs  data_replication_remove.rs  lifecycle_policy_browse.rs  lifecycle_policy_create.rs  lifecycle_policy_mode.rs  lifecycle_policy_remove.rs  quick_start.rs
docs/guides/examples/cpp/: CMakeLists.txt
docs/guides/examples/cpp/src/: access_control_browse_tokens.cc  buckets_browse.cc  buckets_create.cc  create_bucket.cc  data_ingestion_annotating.cc  data_ingestion_batch.cc  data_ingestion_simple.cc  data_ingestion_streaming.cc  data_querying_filter.cc  data_querying_time_range.cc  data_querying_timestamp.cc  data_replication_create.cc
scripts/: strip-drawio-embed.js
src/: global.d.ts
static/: robots.txt
versioned_docs/version-1.16.x/examples/cpp/: CMakeLists.txt
versioned_docs/version-1.16.x/examples/cpp/src/: data_management_delete_data.cc  data_management_delete_query.cc  data_management_rename_entries.cc  data_management_update_labels.cc  data_querying_timestamp.cc
versioned_sidebars/: version-1.10.x-sidebars.json  version-1.11.x-sidebars.json  version-1.12.x-sidebars.json  version-1.13.x-sidebars.json  version-1.14.x-sidebars.json  version-1.15.x-sidebars.json  version-1.16.x-sidebars.json  version-1.19.x-sidedbars.json  version-1.20.x-sidebars.json  version-1.9.x-sidebars.json
(+1602 files in other folders)
