[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reduct-rs="1"
tokio =  { version = "1", features = ["rt-multi-thread"]}
bytes = "1.6.0"
futures = "0.3.30"
futures-util = "0.3.30"